--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   wordpress:
-    image: visiblevc/wordpress:0.17.0-php7.1
+    image: php5-imap
     ports:
       - 8080:80
       - 443:443
@@ -13,6 +13,7 @@ services:
       PLUGINS: >-
         academic-bloggers-toolkit,
         co-authors-plus,
+        wp-mailster,
         [WP-API]https://github.com/WP-API/WP-API/archive/master.zip,
   db:
     image: mariadb:10 # or mysql:5.7
